# Huiti_AI_Plus

./: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
components/: About.tsx  Dashboard.tsx  ExamBuilder.tsx  Logo.tsx  MockExam.tsx  Onboarding.tsx  Practice.tsx  QuestionBank.tsx  QuestionGenerator.tsx  Settings.tsx
services/: ai-factory.ts  gemini.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
