[package]
name = "慧题ai+"
version = "1.0.0"
description = "A Tauri App for Huiti AI Plus"
authors = ["Quaron"]
license = "GPLv3"
repository = "https://github.com/Quaron/huiti-ai-plus"
edition = "2021"
rust-version = "1.77.2"


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
